--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ streamlit==1.21.0
 Pillow==9.5.0
 google-generativeai==0.2.0
 langchain==0.0.115
+PyPDF2==3.0.1
 langchain-google-genai==0.0.1
 youtube-transcript-api==0.5.0
