--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.21.0
-Pillow==9.5.0
-google-generativeai==0.2.0
-langchain==0.0.115
-PyPDF2==3.0.1
-langchain-google-genai==0.0.1
-youtube-transcript-api==0.5.0
+streamlit
+Pillow
+google-generativeai
+langchain
+PyPDF2
+langchain-google-genai
+youtube-transcript-api
